testsuite/tests/typing-recovery/expr_type_clash.compilers.reference
File "expr_type_clash.ml", line 1:
Error: Multiple errors were encountered
File "expr_type_clash.ml", line 12, characters 10-17:
12 | let _ = f "hello"
               ^^^^^^^
  This expression has type "string" but an expression was expected of type "int"
File "expr_type_clash.ml", line 16, characters 3-4:
16 |   (1 : string)
        ^
  This expression has type "int" but an expression was expected of type "string"
File "expr_type_clash.ml", line 21, characters 12-15:
21 |   let y = g 123 in
                 ^^^
  This expression has type "int" but an expression was expected of type "string"
